Fix css for key selector and cycle of fifths on smaller screen sizes.

--- a/app/globals.css
+++ b/app/globals.css
@@ -181,9 +181,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: var(--label-bg-color);
   padding: 10px;
-  border-radius: 20px;
   z-index: 10;
   font-weight: bold;
 }
@@ -249,26 +247,31 @@ body {
 @media (max-width: 768px) {
   .music-selector {
     flex-direction: column;
+    align-items: center;
   }
 
-  .circle-container, .grid-container {
-    width: 90vw;
-    height: auto;
-  }
-
-  .circle-key {
-    width: 40px;
-    height: 40px;
-    font-size: 0.8rem;
+  .circle-container {
+    margin-right: 0;
+    margin-bottom: 20px; /* Adjust space between circle and grid on smaller screens */
   }
 
   .grid-container {
-    grid-template-columns: repeat(2, 1fr);
+     /* Define two columns, each taking up half of the grid container width */
+     grid-template-columns: repeat(2, 1fr);
+     gap: 10px; /* Adjust the gap between grid items as needed */
+     width: 100%; /* Set the width of the grid container to fill its parent */
+     box-sizing: border-box; /* Include padding and border in the element's total width and height */
   }
 
   .grid-item {
-    padding: 10px;
-    font-size: 1rem;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .grid-label {
+    position: static;
+    transform: none;
+    margin-bottom: 10px; /* Add space between label and grid items */
   }
 }
 
